--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,34 @@
 [package]
-name = "factorio-servers-statistics"
+# fss — acronym of "factorio-servers-statistics"
+name = "fss"
 version = "0.1.0"
 authors = ["Dmitry Murzin <diraria@yandex.ru>"]
 edition = "2018"
 
+[profile.dev]
+panic = 'abort'
+
+[profile.release]
+panic = 'abort'
+
 [dependencies]
-reqwest = "0.9.17"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+reqwest = "0.9.18"
+serde = { version = "1.0.94", features = ["derive"] }
+serde_json = "1.0.40"
+chrono = "0.4.7"
+parking_lot = "0.8.0"
+tokio-timer = "0.2.11"
+rand = "0.7.0"
+base64 = "0.10.1"
+itertools = "0.8.0"
+rocket = "0.4.2"
+rocket_contrib = "0.4.2"
+ctrlc = "3.1.3"
+xz2 = "0.1.6"
+bincode = "1.1.4"
+clap = "2.33.0"
+lazy_static = "1.3.0"
+rust-s3 = "0.13.0"
+rusoto_s3 = "0.40.0"
+rusoto_core = "0.40.0"
+rusoto_credential = "0.40.0"
