--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,11 @@ panic = 'abort'
 debug = true
 
 [dependencies]
-reqwest = "0.9.18"
-serde = { version = "1.0.94", features = ["derive"] }
+reqwest = "0.9.19"
+serde = { version = "1.0.98", features = ["derive"] }
 serde_json = "1.0.40"
 chrono = "0.4.7"
-parking_lot = "0.8.0"
+parking_lot = "0.9.0"
 tokio-timer = "0.2.11"
 rand = "0.7.0"
 base64 = "0.10.1"
@@ -29,7 +29,7 @@ xz2 = "0.1.6"
 bincode = "1.1.4"
 clap = "2.33.0"
 lazy_static = "1.3.0"
-rust-s3 = "0.13.0"
-rusoto_s3 = "0.40.0"
-rusoto_core = "0.40.0"
-rusoto_credential = "0.40.0"
+#rust-s3 = "0.15.0"
+#rusoto_s3 = "0.40.0"
+#rusoto_core = "0.40.0"
+#rusoto_credential = "0.40.0"
