--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,10 @@ panic = 'abort'
 debug = true
 
 [dependencies]
-reqwest = "0.9.19"
-serde = { version = "1.0.98", features = ["derive"] }
+reqwest = "0.9.20"
+serde = { version = "1.0.99", features = ["derive"] }
 serde_json = "1.0.40"
-chrono = "0.4.7"
+chrono = "0.4.8"
 parking_lot = "0.9.0"
 tokio-timer = "0.2.11"
 rand = "0.7.0"
@@ -28,8 +28,13 @@ ctrlc = "3.1.3"
 xz2 = "0.1.6"
 bincode = "1.1.4"
 clap = "2.33.0"
-lazy_static = "1.3.0"
-#rust-s3 = "0.15.0"
+lazy_static = "1.4.0"
+#todo
 #rusoto_s3 = "0.40.0"
 #rusoto_core = "0.40.0"
 #rusoto_credential = "0.40.0"
+rusoto_s3 = { git = "https://github.com/rusoto/rusoto", rev = "958d9fa439770f94d330d8e06d4ada58e76b3823" }
+rusoto_core = { git = "https://github.com/rusoto/rusoto", rev = "958d9fa439770f94d330d8e06d4ada58e76b3823" }
+rusoto_credential = { git = "https://github.com/rusoto/rusoto", rev = "958d9fa439770f94d330d8e06d4ada58e76b3823" }
+tokio = "0.1.22"
+dotenv = "0.14.1"
