--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ base64 = "0.10.1"
 itertools = "0.8.0"
 rocket = "0.4.2"
 rocket_contrib = "0.4.2"
-ctrlc = "3.1.3"
+ctrlc = { version = "3.1.3", features = ["termination"] }
 xz2 = "0.1.6"
 bincode = "1.1.4"
 clap = "2.33.0"
