--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,18 @@
     "d3": "^5.11.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuetify": "^2.0.12",
-    "vuex": "^3.0.1"
+    "vuetify": "^2.1.15",
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@types/d3": "^5.7.2",
-    "@vue/cli-plugin-typescript": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
+    "@vue/cli-plugin-typescript": "^4.1.1",
+    "@vue/cli-service": "^4.1.1",
     "sass": "^1.22.10",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^8.0.0",
     "typescript": "^3.6.2",
-    "vue-cli-plugin-vuetify": "^0.6.3",
+    "vue-cli-plugin-vuetify": "^2.0.2",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.3.0"
   }
