--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,22 +7,24 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "d3": "^5.11.0",
+    "axios": "^0.19.1",
+    "d3": "^5.15.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuetify": "^2.1.15",
+    "vuetify": "^2.2.3",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@types/d3": "^5.7.2",
-    "@vue/cli-plugin-typescript": "^4.1.1",
-    "@vue/cli-service": "^4.1.1",
-    "sass": "^1.22.10",
-    "sass-loader": "^8.0.0",
+    "@vue/cli-plugin-typescript": "^4.1.2",
+    "@vue/cli-service": "^4.1.2",
+    "sass": "^1.24.4",
+    "sass-loader": "^8.0.1",
     "typescript": "^3.6.2",
-    "vue-cli-plugin-vuetify": "^2.0.2",
+    "vue-cli-plugin-vuetify": "^2.0.3",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.3.0"
   }
