--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/d3": "^5.7.2",
+    "@types/lodash.debounce": "^4.0.6",
     "@vue/cli-plugin-typescript": "^4.1.2",
     "@vue/cli-service": "^4.1.2",
     "sass": "^1.24.4",
