--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ name = "fss"
 version = "0.1.0"
 authors = ["Dmitry Murzin <diraria@yandex.ru>"]
 edition = "2018"
+default-run = "fss"
 
 [profile.dev]
 panic = 'abort'
@@ -39,3 +40,6 @@ dotenv = "0.15.0"
 lz4 = "1.23.1"
 histogram = "0.6.9"
 regex = "1.3.3"
+hashbrown = { version = "0.7.1", features = ["serde", "nightly"] }
+jemallocator = "0.3.2"
+jemalloc-ctl = "0.3.3"
