--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,32 +14,33 @@ panic = 'abort'
 debug = true
 
 [dependencies]
-reqwest = "0.9.22"
-serde = { version = "1.0.103", features = ["derive"] }
-serde_json = "1.0.42"
-chrono = "0.4.10"
-parking_lot = "0.10.0"
-tokio-timer = "0.2.12"
-rand = "0.7.2"
-base64 = "0.11.0"
-itertools = "0.8.2"
-rocket = "0.4.2"
-rocket_contrib = "0.4.2"
-ctrlc = { version = "3.1.3", features = ["termination"] }
-xz2 = "0.1.6"
-bincode = "1.2.0"
+base64 = "0.12.0"
+bincode = "1.2.1"
+bytes = "0.5.4"
+chrono = "0.4.11"
 clap = "2.33.0"
-lazy_static = "1.4.0"
-rusoto_s3 = "0.42.0"
-rusoto_core = "0.42.0"
-rusoto_credential = "0.42.0"
-tokio = "0.1.22"
-#tokio = { version = "0.2.2", features = ["full"] }
-#tokio-util = { version = "0.2.0", features = ["codec"] }
+ctrlc = { version = "3.1.4", features = ["termination"] }
 dotenv = "0.15.0"
-lz4 = "1.23.1"
-histogram = "0.6.9"
-regex = "1.3.3"
+futures = "0.3.4"
 hashbrown = { version = "0.7.1", features = ["serde", "nightly"] }
-jemallocator = "0.3.2"
+histogram = "0.6.9"
+itertools = "0.9.0"
 jemalloc-ctl = "0.3.3"
+jemallocator = "0.3.2"
+lazy_static = "1.4.0"
+lz4 = "1.23.1"
+parking_lot = "0.10.0"
+rand = "0.7.3"
+regex = "1.3.6"
+reqwest = { version = "0.10.4", features = ["blocking"] }
+rocket = "0.4.4"
+rocket_contrib = "0.4.4"
+rusoto_core = "0.43.0"
+rusoto_credential = "0.43.0"
+rusoto_s3 = "0.43.0"
+serde = { version = "1.0.105", features = ["derive"] }
+serde_json = "1.0.50"
+tokio = "0.2.13"
+tokio-timer = "0.2.13"
+tokio-util = { version = "0.3.1", features = ["codec"] }
+xz2 = "0.1.6"
