--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,16 @@ panic = 'abort'
 panic = 'abort'
 debug = true
 
+[profile.dev.package."*"]
+opt-level = 3
+debug = true
+[profile.release.package."*"]
+opt-level = 3
+debug = true
+[profile.test.package."*"]
+opt-level = 3
+debug = true
+
 [dependencies]
 base64 = "0.12.0"
 bincode = "1.2.1"
