--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - run:
           name: Test
-          command: cargo test
+          command: cargo test -- --test-threads=1
   recompress_backups:
     docker:
       - image: circleci/rust
